# TTS_more

./: .env.example  .gitignore  Build-Package.ps1  Initialize.cmd  Makefile  README.md  Repair.cmd  Start-Dev.cmd  Start.cmd  Stop.cmd  build-four-pack.ps1  repo.lock.json
backend/: pyproject.toml
backend/app/: adapter_factory.py  auth.py  cuda_validation.py  hardware.py  lan_evidence.py  lan_nodes.py  lan_orchestration.py  lan_topology.py  local_control.py  main.py  models.py  net_guard.py  open_source_tts.py  parser.py  parser_config.py  portable_control.py  portable_discovery.py  portable_endpoint_trust.py  portable_file_io.py  portable_imports.py  portable_locator_mutations.py  portable_manifest.py  portable_services.py  queue.py  resources.py  role_library.py  service_config.py  service_store_io.py  services.py  storage.py  supervisor.py  windows_job.py  windows_ssh.py
backend/tests/: conftest.py  test_adapter_factory.py  test_adapters.py  test_api.py  test_auth.py  test_ci_architecture_scope.py  test_comfyui_adversarial_audit.py  test_comfyui_client.py  test_commercial_provider_clients.py  test_cuda_evidence_sanitizer.py  test_cuda_validation.py  test_deploy_tool.py  test_gpu_workflow.py  test_hardware.py  test_integration_sync.py  test_lan_evidence.py  test_lan_nodes.py  test_lan_orchestration.py  test_lan_topology.py  test_local_control.py  test_models.py  test_net_guard.py  test_parser.py  test_portable_control.py  test_portable_diagnostics.py  test_portable_discovery.py  test_portable_file_io.py  test_portable_first_run_harness.py  test_portable_install.py  (+25 more)
(+259 files in other folders)
