[project]
name = "tts-more-backend"
version = "0.1.0"
description = "Orchestrator API for a three-engine script dubbing workstation."
requires-python = ">=3.10,<3.12"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.0",
  "PyYAML>=6.0.0",
  "httpx>=0.27.0",
  "python-dotenv>=1.0.0",
  "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "pytest-asyncio>=0.23.0",
  "httpx>=0.27.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
